--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     </div>
     <!-- institution-company ends here -->
     <script src="js/split.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
